# PixelPeek

./: .gitignore  AppBar.qml  BuildInfo.h.in  CMakeLists.txt  Controls.qml  Driver.cpp  Driver.h  HistoryImage.h  HistoryImageList.cpp  HistoryImageList.h  HistoryViewer.qml  ImageProvider.cpp  ImageProvider.h  ImageUrlBox.qml  ImageUrlBoxButton.qml  ImageViewer.qml  ImageWatcher.h  Magnifier.qml  Main.qml  PixelPeek.rc.in  PopWindow.qml  README.md  StatusBar.qml  Utils.js  main.cpp  main.qml
.github/workflows/: windows-release.yml
